route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-webapp-docker
spec:
  to:
    kind: Service
    name: simple-webapp-docker
